--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
   background: #0a2a43;
-  min-height: 1500px;
+  min-height: 1000px;
 }
 
 #imgs::before {
@@ -23,6 +23,7 @@ body {
 }
 
 #imgs {
+  
   position: relative;
   width: 100%;
   height: 100vh;
@@ -72,13 +73,37 @@ body {
   display: flex;
   flex-direction: column;
   margin-inline: 60px;
-  margin-bottom: 100px;
 }
 
 #text h3 {
   font-size: 3rem;
   color: white;
+  margin-bottom: 10px;
 }
+
+#text h3::after {
+  content: '';
+  display: inline-block;
+  background: white;
+  height: 2px;
+  width: 65vw;
+
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+
+/* #text h3::before {
+  content: '';
+  display: inline-block;
+  background: white;
+  
+  width: 40px;
+  height: 10px;
+
+  margin-bottom: 10px;
+  margin-right: 10px;
+
+} */
 
 #text p {
   color: white;
@@ -87,8 +112,7 @@ body {
 }
 
 footer {
-  margin-inline: 60px;
-  align-self: center;
+  margin-inline: auto;
 }
 
 footer p {
